# encoding-mashup-server

./: .gitignore  .travis.yml  LICENSE  README.md  csv2sqlite.py  encoding-mashup-server.cabal
config/: keter.yaml
resources/: csv2sqlite.py  mashup-server.sql
resources/encoding-table/: cns2uni.json  uni2cns.json
resources/pgsql/: mashup-server.sql
resources/puppet/: bootstrap.sh
resources/web-ui/static/: index.html
resources/web-ui/static/css/: encoding-mashup.css
resources/web-ui/static/js/: encoding-mashup.coffee
scripts/: csv2sqlite.py  encoding_mashup_css.hs  execute_snap.sh  install_pg_ext.sh
scripts/data/: 3du.csv  small.csv
scripts/pgsql/: mashup-server.sql
scripts/puppet/: basenode.pp  bootstrap.sh  encoding-mashup-db.pp  encoding_mashup.pp  user_env.pp
src/: CharDatabase.hs  Config.hs  DataImporter.hs  EncodingTable.hs  HttpUtil.hs  HttpUtils.hs  Main.hs  Mime.hs  RestApi.hs  Site.hs  Type.hs  Util.hs  Utils.hs  Version.hs  WebUi.hs
src/DataImporter/: Google0.hs
static/: index.html
static/css/: encoding-mashup.css
static/js/: encoding-mashup.coffee
tests/testsuite/: TestSuite.hs
tests/testsuite/Tests/: App.hs  RestApi.hs
