Name:                encoding-mashup-server
Version:             0.0
License:             BSD3
Author:              Favonia
Maintainer:          favonia@gmail.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Executable encoding-mashup-server
  Hs-source-dirs: src
  Main-is: Main.hs

  if impl(ghc < 7.6)
    Build-depends:
      template-haskell          < 2.8

  Build-depends:
    base                      >= 4     && < 5,
    bytestring                >= 0.9.1 && < 0.11,
    text                      >= 0.11  && < 0.13,
    lens                      >= 3.8   && < 4,
    configurator              >= 0.2   && < 0.4,
    unordered-containers      >= 0.2   && < 0.4,
    stm                       >= 2.4   && < 3,
    MonadCatchIO-transformers >= 0.2.1 && < 0.4,
    mtl                       >= 2     && < 3,
    snap                      >= 0.11  && < 0.13,
    snap-core                 >= 0.9   && < 0.11,
    snap-server               >= 0.9   && < 0.11,
    snaplet-sqlite-simple     >= 0.4,
    aeson                     >= 0.6   && < 0.8

  Ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
