Name:                encoding-mashup-server
Version:             0.0
License:             BSD3
License-file:        LICENSE
Author:              Favonia, MnO2
Maintainer:          favonia@gmail.com, mno2.csie@gmail.com
Synopsis:            Encoding Mashup Server 
Description:
    /Overview/
    .
    Encoding Mashup Server
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.10
Homepage:            https://github.com/g0v/encoding-mashup-server
Bug-reports:         https://github.com/g0v/encoding-mashup-server/issues

Data-files:
  resources/web-ui/static/*.html
  resources/web-ui/static/css/*.min.css
  resources/web-ui/static/img/*.png
  resources/web-ui/static/js/*.min.js
  resources/web-ui/static/js/*.js
  resources/web-ui/static/js/*.coffee
  resources/encoding-table/*.json

Source-Repository head
    Type: git
    Location: git@github.com:g0v/encoding-mashup-server.git


Flag development
  Description: Whether to build the server in development (interpreted) mode
  Default: False

Executable encoding-mashup-server
  Default-language: Haskell2010
  Hs-source-dirs: src
  Main-is: Main.hs

  if impl(ghc < 7.6)
    Build-depends:
      template-haskell          < 2.8

  Build-depends:
    base                      >= 4     && < 5,
    filepath                  >= 1.3   && < 1.5,
    bytestring                >= 0.9.1 && < 0.11,
    blaze-builder             >= 0.3   && < 0.5,
    text                      >= 0.11  && < 0.13,
    lens                      >= 3.8   && < 4,
    unordered-containers      >= 0.2   && < 0.4,
    transformers              >= 0.2.1 && < 0.4,
    MonadCatchIO-transformers >= 0.2.1 && < 0.4,
    snap                      >= 0.11  && < 0.13,
    snap-core                 >= 0.9   && < 0.11,
    snap-server               >= 0.9   && < 0.11,
    snap-loader-static        >= 0.9   && < 0.11,
    snaplet-postgresql-simple >= 0.3   && < 0.5,
    postgresql-simple         >= 0.2.4 && < 0.3,
    cryptohash                >= 0.8   && < 0.10,
    attoparsec                >= 0.10  && < 0.12,
    aeson                     >= 0.6   && < 0.8,
    clay                      >= 0.1   && < 0.3

  if flag(development)
    Build-depends:
      snap-loader-dynamic == 0.10.*,
      ekg                 == 0.3.1.*
    Cpp-options: -DDEVELOPMENT
    Ghc-options: -threaded -w -with-rtsopts=-T
  else
    Ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2


------------------------------------------------------------------------------
Test-suite testsuite
    Default-language: Haskell2010
    Type: exitcode-stdio-1.0
    Hs-source-dirs: src tests/testsuite
    Main-is:
        TestSuite.hs
    Other-modules:
        RestApi
        Tests.App
        Tests.RestApi
    Build-depends:
        base                      >= 4     && < 5,
        filepath                  >= 1.3   && < 1.5,
        bytestring                >= 0.9.1 && < 0.11,
        blaze-builder             >= 0.3   && < 0.5,
        text                      >= 0.11  && < 0.13,
        lens                      >= 3.8   && < 4,
        unordered-containers      >= 0.2   && < 0.4,
        containers                >= 0.4   && < 0.6,
        transformers              >= 0.2.1 && < 0.4,
        MonadCatchIO-transformers >= 0.2.1 && < 0.4,
        snap                      >= 0.11  && < 0.13,
        snap-core                 >= 0.9   && < 0.11,
        snap-server               >= 0.9   && < 0.11,
        snap-loader-static        >= 0.9   && < 0.11,
        snaplet-postgresql-simple >= 0.3   && < 0.5,
        postgresql-simple         >= 0.2.4 && < 0.3,
        cryptohash                >= 0.8   && < 0.10,
        attoparsec                >= 0.10  && < 0.12,
        aeson                     >= 0.6   && < 0.8,
        clay                      >= 0.1   && < 0.3,
        HUnit                      >= 1.2       && < 2,
        QuickCheck                 >= 2.4       && < 3,
        test-framework             >= 0.8       && <0.9,
        test-framework-hunit       >= 0.3       && <0.4,
        test-framework-quickcheck2 >= 0.3       && <0.4
    Ghc-options: -O2 -Wall -fwarn-tabs
